--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ stages:
         pool: Petclinic
         steps:
           - script: |
+              cd /home/andychen/ansible_project/playbook
               ansible-playbook –i /home/andychen/ansible_project/inventory petclinic_app_test.yml 
   
 
