--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ stages:
         pool: Petclinic
         steps:
           - script: |
-              ansible-playbook playbook/petclinic_app_test.yml 
+              ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible_project/playbook/petclinic_app_test
   
 
   - stage: package
@@ -115,6 +115,7 @@ stages:
           - script: |
               ansible-playbook -i /home/andychen/ansible_project/playbook/acceptance.yml
      
+
 
 
 schedules:
