--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,7 +85,7 @@ stages:
         pool: Petclinic
         steps:
           - script: |
-              ansible-playbook -i /home/andychen/ansible_project/playbook/production.yml
+              ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible_project/playbook/petclinic_app_production.yml
 
 
   - stage: run_selenium_test
@@ -113,8 +113,26 @@ stages:
         pool: Petclinic
         steps:
           - script: |
-              ansible-playbook -i /home/andychen/ansible_project/playbook/acceptance.yml
+              ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible_project/playbook/petclinic_app_acceptance.yml
      
+
+  - stage: Deploy_to_Production
+    displayName: Deploy to production Environment
+    dependsOn: Provisioning
+    jobs:
+    - job: deploy_to_production
+      displayName: Deploy to production Environment
+    pool:
+      name: Petclinic
+      steps:
+      - script: |
+          pip install --user jmespath
+      - script: |
+          scp -r -i /home/andychen/terraform/private_key.pem -r /home/andychen/ansible_project andychen@$(cat /home/andychen/ansible_project/azure_vm/output.json | jq -r '.vm_public_ip.value'):/home/andychen/
+        displayName: 'Copy Ansible playbook to VM'
+      - script: |
+          ansible-playbook -i /home/andychen/ansible_project/inventory/test --private-key=~/.ssh/id_rsa /home/andychen/ansible_project/playbook/production.yml -u andychen
+        displayName: 'Run Ansible playbook'
 
 
 
