--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,20 +89,21 @@ stages:
   - stage: run_selenium_test
     displayName: 'Run Selenium Test'
     jobs:
-      - job: run_selenium_test
-        displayName: 'Run Selenium Test Job'
-        pool:
-          name: Petclinic 
-        steps:
-          - script: |
-              python /home/andychen/devoteam-traineeship-petclinic/selenium-test.py
-              pip install -r requirements.txt
-              pytest --html=report.html
-          - task: PublishTestResults@2
-            displayName: 'Publish Selenium Test Results'
-            inputs:
-              testResultsFiles: 'report.html'
-              testRunTitle: 'Selenium Test Results'
+    - job: run_selenium_test
+      displayName: 'Run Selenium Test Job'
+      pool:
+        name: Petclinic 
+      steps:
+        - script: |
+            pip install -r /home/andychen/devoteam-traineeship-petclinic/requirements.txt
+            python /home/andychen/devoteam-traineeship-petclinic/selenium-test.py
+            pytest --html=report.html
+        - task: PublishTestResults@2
+          displayName: 'Publish Selenium Test Results'
+          inputs:
+            testResultsFiles: 'report.html'
+            testRunTitle: 'Selenium Test Results'
+
 
   - stage: ansible_deploy_selenium
     displayName: 'Ansible Deploy to Selenium'
