--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -120,7 +120,7 @@ stages:
     - job: TerraformJob
       displayName: 'Run Terraform'
       pool:
-        vmImage: 'ubuntu-latest'
+        name: Petclinic
       steps:
         - checkout: self  # checks out files from repo
 
@@ -131,10 +131,6 @@ stages:
             terraform apply -auto-approve
           displayName: 'Terraform Apply'
 
-        - script: |
-            cd terraform_files
-            echo "##vso[task.setvariable variable=VM_IP;]$(terraform output vm_ip)"
-          displayName: 'Extract VM IP'
 
 
   - stage: Deploy_to_Production
