--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,6 +139,7 @@ stages:
       steps:
       - script: |
           VM_IP=$(terraform output -no-color vm_public_ip)
+          echo "VM IP is: $VM_IP"
           scp -r -i /home/andychen/terraform/private_key.pem /home/andychen/ansible_project/playbook/ andychen@$VM_IP:/home/andychen/
         displayName: 'Copy Ansible Playbook to VM'
         
