--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,6 +138,7 @@ stages:
         name: Petclinic 
       steps:
       - script: |
+          cd /home/andychen/terraform/
           VM_IP=$(terraform output -no-color vm_public_ip)
           echo "VM IP is: $VM_IP"
           scp -r -i /home/andychen/terraform/private_key.pem /home/andychen/ansible_project/playbook/ andychen@$VM_IP:/home/andychen/
