--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,7 +139,7 @@ stages:
       steps:
       - script: |
           cd /home/andychen/terraform/
-          VM_IP=$(terraform output -no-color vm_public_ip)
+          VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
           echo "VM IP is: $VM_IP"
           scp -r -i /home/andychen/terraform/private_key.pem /home/andychen/ansible_project/playbook/ andychen@$VM_IP:/home/andychen/
         displayName: 'Copy Ansible Playbook to VM'
