--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,6 +138,8 @@ stages:
         name: Petclinic 
       steps:
       - script: |
+          eval "$(ssh-agent -s)"
+          ssh-add /home/andychen/terraform/private_key.pem
           cd /home/andychen/terraform/
           VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
           echo "VM IP is: $VM_IP"
