--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,7 +147,8 @@ stages:
         displayName: 'Copy Ansible Playbook to VM'
         
       - script: |
-          ssh -i /home/andychen/terraform/private_key.pem andychen@$VM_IP "ansible-playbook /home/andychen/ansible_project/playbook/petclinic_app_production.yml"
+          ssh -i /home/andychen/terraform/private_key.pem andychen@$VM_IP 
+          ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible/playbook/petclinic_app_production.yml" ansible-playbook
         displayName: 'Run Ansible Playbook'
 
 schedules:
