--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,6 +147,7 @@ stages:
         displayName: 'Copy Ansible Playbook to VM'
         
       - script: |
+          cd /home/andychen/terraform/
           VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
           echo "VM IP is: $VM_IP"
           ssh -i /home/andychen/terraform/private_key.pem andychen@$VM_IP "ansible-playbook -i ~/.ansible/inventory/test ~/.ansible/playbook/petclinic_app_production.yml"
