--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -144,4 +144,16 @@ stages:
           - script: |
               eval "$(ssh-agent -s)"
               ssh-add /home/andychen/terraform/private_key.pem
-              cd /home/
+              cd /home/andychen/terraform/
+              VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
+              echo "VM IP is: $VM_IP"
+              ssh -i /home/andychen/terraform/private_key.pem andychen@$VM_IP
+              ansible-playbook -i ~/.ansible/inventory/test ~/.ansible/playbook/petclinic_app_production.yml
+
+
+schedules:
+  - cron: "0 0 * * *"   
+    displayName: DailySchedule
+    branches:
+      include:
+        - master
