--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,8 +147,8 @@ stages:
               cd /home/andychen/terraform/
               VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
               echo "VM IP is: $VM_IP"
-              ssh -i /home/andychen/terraform/private_key.pem andychen@$VM_IP
-              ansible-playbook -i ~/.ansible/inventory/test ~/.ansible/playbook/petclinic_app_production.yml
+              ssh -i /home/andychen/terraform/private_key.pem andychen@$VM_IP "ansible-playbook -i ~/.ansible/ansible_project/inventory/test ~/.ansible/ansible_project/playbook/petclinic_app_production.yml"
+            displayName: 'Deploy webapp'
 
 
 schedules:
