--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,12 +133,12 @@ stages:
           name: Petclinic
         steps:
           - script: |
-              eval "$(ssh-agent -s)"
-              ssh-add /home/andychen/terraform/private_key.pem
-              cd /home/andychen/terraform/
-              VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
-              echo "VM IP is: $VM_IP"
-              scp -i ~/.ssh/id_rsa -r /home/andychen/terraform/private_key.pem /home/andychen/ansible_project andychen@$VM_IP:~/.ansible
+              eval "$(ssh-agent -s)" #start ssh agent in background and export environment variables to current shell
+              ssh-add /home/andychen/terraform/private_key.pem #add private key to ssh agent
+              cd /home/andychen/terraform/ 
+              VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"') #retrieve and process value of VM_IP and remove ""
+              echo "VM IP is: $VM_IP" #for debugging purpose
+              scp -i ~/.ssh/id_rsa -r /home/andychen/terraform/private_key.pem /home/andychen/ansible_project andychen@$VM_IP:~/.ansible #secure copy private key and authenticate transfer. 
             displayName: 'Copy Ansible Playbook to VM'
 
           - script: |
@@ -147,7 +147,7 @@ stages:
               cd /home/andychen/terraform/
               VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"')
               echo "VM IP is: $VM_IP"
-              ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible_project/playbook/petclinic_app_production.yml -l webapp
+              ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible_project/playbook/petclinic_app_production.yml -l webapp #run ansible #run ansible and use inventory file and limit to webapp host group
             displayName: 'Deploy webapp'
 
 
