--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,9 +109,9 @@ stages:
               eval "$(ssh-agent -s)" #start ssh agent in background and export environment variables to current shell
               ssh-add /home/andychen/terraform/private_key.pem #add private key to ssh agent
               cd /home/andychen/terraform/ 
-              VM_IP=$(terraform output -no-color vm_public_ip | tr -d '"') #retrieve and process value of VM_IP and remove ""
+              VM_IP=$(terraform output -no-color vm_public_ips | tr -d '"') #retrieve and process value of VM_IP and remove ""
               echo "VM IP is: $VM_IP" #for debugging purpose
-              scp -i ~/.ssh/id_rsa -r /home/andychen/terraform/private_key.pem andychen@$VM_IP:~/.ssh #secure copy private key and authenticate transfer. 
+              scp -i ~/.ssh/id_rsa /home/andychen/terraform/private_key.pem andychen@$VM_IP:~/.ssh #secure copy private key and authenticate transfer. 
             displayName: 'Copy Ansible Playbook to VM'
 
           - script: |
