Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,8 +110,10 @@ stages:
           - script: |
               eval "$(ssh-agent -s)"
               ssh-add /home/andychen/terraform/private_key.pem
+              
               cd /home/andychen/terraform/ 
               VM_IPS=(4.180.204.20 4.180.204.38 4.180.204.47)
+              ssh-copy-id -i /home/andychen/.ssh/id_rsa.pub azureuser@IP
 
               for IP in "${VM_IPS[@]}"; do
                 scp -i /home/andychen/terraform/private_key.pem andychen@$IP:~/.ssh
@@ -127,7 +129,7 @@ stages:
               ssh -v andychen@<IP> 
               ssh-add /home/andychen/terraform/private_key.pem
               cd /home/andychen/terraform/
-              VM_IP=$(terraform output -no-color vm_public_ips | tr -d '"')
+              VM_IPS=$(terraform output -no-color vm_public_ips | tr -d '"')
               echo "VM IP is: $VM_IP"
               ansible-playbook -i /home/andychen/ansible_project/inventory/test /home/andychen/ansible_project/playbook/petclinic_app_combined.yml 
             displayName: 'Deploy webapp'
