--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -131,6 +131,22 @@ stages:
                 rm -rf $(Pipeline.Workspace)/results.jtl
                 jmeter -Jmeter.save.saveservice.output_format=xml -n -t $(Pipeline.Workspace)/load-test-repo/VM_load_test.jmx -l $(Pipeline.Workspace)/results.jtl -e -o $(Pipeline.Workspace)/jmeter_report
 
+  - stage: run_selenium_test
+    displayName: 'Run Selenium Test'
+    jobs:
+      - job: run_selenium_test
+        displayName: 'Run Selenium Test Job'
+        pool:
+          name: Petclinic
+        steps:
+          - script: python /home/andychen/devoteam-traineeship-petclinic/selenium-vm.py
+            displayName: 'Run Selenium Test'
+          - task: PublishTestResults@2
+            displayName: 'Publish Selenium Test Results'
+            inputs:
+              testResultsFiles: 'report.html'
+              testRunTitle: 'Selenium Test Results'
+
 schedules:
   - cron: "0 0 * * *"   
     displayName: DailySchedule
