Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,6 +122,7 @@ stages:
     steps:
     - script: |
         cd /home/andychen/terraform/
+         - script: chmod 600 /home/andychen/terraform/private_key.pem
         ansible-playbook -i /home/andychen/ansible_project/inventory/test -l targets /home/andychen/ansible_project/playbook/petclinic_app_combined.yml
       displayName: 'Deploy webapp'
 
